--- a/ArzonCargo/appsettings.json
+++ b/ArzonCargo/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=127.0.0.1;uid=root;pwd=alisher05;database=Cargo"},
+    "DefaultConnection": "server=127.0.0.1;uid=root;pwd=alisher05;database=CargoDB"},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
