--- a/ArzonCargo/ArzonCargo.csproj
+++ b/ArzonCargo/ArzonCargo.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="14.0.0" />
+        <PackageReference Include="MediatR" Version="12.5.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
@@ -15,6 +17,12 @@
         </PackageReference>
         <PackageReference Include="MySql.EntityFrameworkCore" Version="9.0.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Infrastructure\User\DeleteUser\" />
+      <Folder Include="Infrastructure\User\GetUser\" />
+      <Folder Include="Infrastructure\User\UpdateUser\" />
     </ItemGroup>
 
 </Project>
