--- a/ArzonCargo/ArzonCargo.csproj
+++ b/ArzonCargo/ArzonCargo.csproj
@@ -19,4 +19,9 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="ProductData\Command\" />
+      <Folder Include="UserData\Commands\" />
+    </ItemGroup>
+
 </Project>
