git ignore fixed

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -21,4 +21,8 @@
     <ItemGroup>
       <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Dtos\Response\ProductResponse.cs" />
+    </ItemGroup>
 </Project>
