added crud operation for order and product

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=127.0.0.1;uid=root;pwd=alisher05;database=CargoDB"},
+    "DefaultConnection": "server=localhost;uid=root;pwd=;database=CargoDB"},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
