--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,12 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=127.0.0.1;uid=root;pwd=alisher05;database=cargodb"},
+    "DefaultConnection": "server=localhost;uid=root;pwd=;database=cargodb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
   "AllowedHosts": "*"
 }
