--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;uid=root;pwd=;database=cargodb"
+    "DefaultConnection": "server=localhost;uid=root;pwd=alisher05;database=cargodb"
   },
   "Logging": {
     "LogLevel": {
