--- a/GoodsManager/GoodsManager.csproj
+++ b/GoodsManager/GoodsManager.csproj
@@ -8,7 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\WebApi\WebApi.csproj" />
+      <ProjectReference Include="..\ReferenceClass\ReferenceClass.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MudBlazor" Version="8.8.0" />
     </ItemGroup>
 
 </Project>
