--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -21,7 +21,10 @@
 
     <ItemGroup>
       <Folder Include="Data\" />
-      <Folder Include="Domain\" />
       <Folder Include="Infrastructure\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ReferenceClass\ReferenceClass.csproj" />
     </ItemGroup>
 </Project>
