--- a/GoodsManager/Properties/launchSettings.json
+++ b/GoodsManager/Properties/launchSettings.json
@@ -4,7 +4,9 @@
       "http": {
         "commandName": "Project",
         "dotnetRunMessages": true,
-        "launchBrowser": false,
+        "launchBrowser": true,
+        "launchUrl": "counter",
+
         "applicationUrl": "http://localhost:5222",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
@@ -13,7 +15,8 @@
       "https": {
         "commandName": "Project",
         "dotnetRunMessages": true,
-        "launchBrowser": false,
+        "launchBrowser": true,
+        "launchUrl": "counter",
         "applicationUrl": "https://localhost:7178;http://localhost:5222",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
