search was implemented for user

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;User Id=postgres;Password=Root;Database=Cargo;"
+    "DefaultConnection": "Server=localhost;Port=5432;User Id=postgres;Password=alisher05;Database=Cargo;"
   },
   "Logging": {
     "LogLevel": {
