changed some files

--- a/MudBlazorPR/MudBlazorPR.csproj
+++ b/MudBlazorPR/MudBlazorPR.csproj
@@ -14,7 +14,7 @@
 
 
     <ItemGroup>
-      <AdditionalFiles Include="Pages1\Counter1.razor" />
-      <AdditionalFiles Include="Pages1\Home1.razor" />
+      <_ContentIncludedByDefault Remove="Pages1\Counter1.razor" />
+      <_ContentIncludedByDefault Remove="Pages1\Home1.razor" />
     </ItemGroup>
 </Project>
