--- a/MudBlazorPR/MudBlazorPR.csproj
+++ b/MudBlazorPR/MudBlazorPR.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
         <PackageReference Include="MudBlazor" Version="7.*"/>
     </ItemGroup>
 
