user data editing was added

--- a/MudBlazorPR/MudBlazorPR.csproj
+++ b/MudBlazorPR/MudBlazorPR.csproj
@@ -15,5 +15,7 @@
     <ItemGroup>
         <_ContentIncludedByDefault Remove="Pages1\Counter1.razor"/>
         <_ContentIncludedByDefault Remove="Pages1\Home1.razor"/>
+        <_ContentIncludedByDefault Remove="DialogWindows\ConfirmDialog.razor" />
+        <_ContentIncludedByDefault Remove="DialogWindows\EditUserDialog.razor" />
     </ItemGroup>
 </Project>
