--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -20,7 +20,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Data\Migrations\" />
       <Folder Include="Infrastructure\" />
+      <Folder Include="Infrastructure\Migrations\" />
     </ItemGroup>
 
     <ItemGroup>
