adding new user and checking barcode added

--- a/MudBlazorPR/MudBlazorPR.csproj
+++ b/MudBlazorPR/MudBlazorPR.csproj
@@ -18,4 +18,8 @@
         <_ContentIncludedByDefault Remove="DialogWindows\ConfirmDialog.razor" />
         <_ContentIncludedByDefault Remove="DialogWindows\EditUserDialog.razor" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ReferenceClass\ReferenceClass.csproj" />
+    </ItemGroup>
 </Project>
