--- a/MudBlazorPR/Properties/launchSettings.json
+++ b/MudBlazorPR/Properties/launchSettings.json
@@ -14,6 +14,7 @@
         "dotnetRunMessages": true,
         "launchBrowser": false,
         "applicationUrl": "http://localhost:5160",
+        "launchUrl": "home",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
@@ -23,6 +24,7 @@
         "dotnetRunMessages": true,
         "launchBrowser": false,
         "applicationUrl": "https://localhost:7285;http://localhost:5160",
+        "launchUrl": "home",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
