--- a/MudBlazorPR/Properties/launchSettings.json
+++ b/MudBlazorPR/Properties/launchSettings.json
@@ -31,7 +31,7 @@
       },
       "IIS Express": {
         "commandName": "IISExpress",
-        "launchBrowser": true,
+        "launchBrowser": false,
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
