--- a/Stocky.WebApi/Stocky.WebApi.csproj
+++ b/Stocky.WebApi/Stocky.WebApi.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="MediatR" Version="12.5.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.6" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
@@ -23,7 +24,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Application\AuthenticationData\Queries\" />
       <Folder Include="Infrastructure\" />
     </ItemGroup>
 
