--- a/Stocky.WebApi/appsettings.json
+++ b/Stocky.WebApi/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;User Id=postgres;Password=Root;Database=Cargo;"
   },
+  "Jwt": {
+    "Key": "your_super_secret_key_which_is_long_enough"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
