--- a/Stocky.WebApi/appsettings.json
+++ b/Stocky.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;User Id=postgres;Password=Root;Database=Cargo;"
+    "DefaultConnection": "Server=localhost;Port=5432;User Id=postgres;Password=Root;Database=Stocky;"
   },
   "Jwt": {
     "Key": "your_super_secret_key_which_is_long_enough"
