--- a/Stocky.Client/Stocky.Client.csproj
+++ b/Stocky.Client/Stocky.Client.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
@@ -8,8 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Append.Blazor.Printing" Version="6.3.0" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0"/>
         <PackageReference Include="MudBlazor" Version="7.*"/>
+        <PackageReference Include="QRCoder" Version="1.6.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -22,5 +23,4 @@
     <ItemGroup>
         <ProjectReference Include="..\Stocky.Shared\Stocky.Shared.csproj" />
     </ItemGroup>
-    
 </Project>
