added accesses to pages (admin and adder)

--- a/Stocky.Client/Stocky.Client.csproj
+++ b/Stocky.Client/Stocky.Client.csproj
@@ -8,9 +8,10 @@
 
     <ItemGroup>
         <PackageReference Include="Append.Blazor.Printing" Version="6.3.0" />
-        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0"/>
-        <PackageReference Include="MudBlazor" Version="7.*"/>
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
+        <PackageReference Include="MudBlazor" Version="7.*" />
         <PackageReference Include="QRCoder" Version="1.6.0" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
     </ItemGroup>
 
     <ItemGroup>
