fixed jwt token settings

--- a/Stocky.WebApi/appsettings.json
+++ b/Stocky.WebApi/appsettings.json
@@ -3,7 +3,9 @@
     "DefaultConnection": "Server=localhost;Port=5432;User Id=postgres;Password=Bm05;Database=Cargo;"
   },
   "Jwt": {
-    "Key": "your_super_secret_key_which_is_long_enough"
+    "Key": "your_super_secret_key_which_is_long_enough",
+    "Issuer": "StockyIssuer",
+    "Audience": "StockyAudience"
   },
   "Logging": {
     "LogLevel": {
@@ -11,8 +13,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-"SumOfKg": {
-  "SumOfPerKg": 28
-},
   "AllowedHosts": "*"
 }
