feat: add initial database migration and update models for authentication, products, orders, and reporting, updated report page(added new products property)

--- a/Stocky.WebApi/Stocky.WebApi.csproj
+++ b/Stocky.WebApi/Stocky.WebApi.csproj
@@ -30,4 +30,8 @@
     <ItemGroup>
       <ProjectReference Include="..\Stocky.Shared\Stocky.Shared.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Report\Dtos\PaymentBreakdownDto.cs" />
+    </ItemGroup>
 </Project>
