--- a/Stocky.WebApi/Stocky.WebApi.csproj
+++ b/Stocky.WebApi/Stocky.WebApi.csproj
@@ -34,4 +34,8 @@
     <ItemGroup>
       <Compile Remove="Report\Dtos\PaymentBreakdownDto.cs" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Infrastructure\Migrations\20250725153757_Initial.Designer.cs" />
+    </ItemGroup>
 </Project>
